--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -83,8 +83,8 @@ main {
         text-decoration: inherit;
         font-variant: normal;
         text-transform: none;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: none;
+        -moz-osx-font-smoothing: none;
         font-feature-settings: 'liga';
         margin-right: 14px;
         padding: 0 3px;
