--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -19,8 +19,8 @@ body {
   font-size: 16px;
   line-height: 1.2em;
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: none;
 }
 
 img,
