--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -12,3 +12,11 @@ pre.highlight, code {
 	line-height: 1.4em;
 	tab-size: 4;
 }
+
+img + em {
+	display: block;
+	text-align: center;
+	font-size: .8rem;
+	color: light-grey;
+  }
+  
